# TransitoBot-Soacha-Repositorio-PUJ

./: CITATION.cff  README.md
03_Sistema_TransitoBot/backRag/: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  Makefile  README.md  codigo,txt  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.py  test_anthropic_endpoint.py
03_Sistema_TransitoBot/backRag/app/: main.py
03_Sistema_TransitoBot/backRag/app/api/v1/: router.py
03_Sistema_TransitoBot/backRag/app/core/: __init__.py  config.py  dependencies.py  logging_config.py
03_Sistema_TransitoBot/backRag/app/models/: __init__.py
03_Sistema_TransitoBot/backRag/app/repositories/: __init__.py  chroma_repository.py
03_Sistema_TransitoBot/backRag/app/services/: __init__.py  anthropic_service.py  health_service.py  llm_service.py  openrouter_service.py  response_service.py  search_service.py  tool_manager.py
03_Sistema_TransitoBot/backRag/app/utils/: __init__.py  constants.py  promps.py
03_Sistema_TransitoBot/backRag/data/documents/: CodigoNacionaldeTransitoTerrestre.docx
03_Sistema_TransitoBot/backRag/scripts/: setup_database.py  transit_processor.py
03_Sistema_TransitoBot/rasa/: .dockerignore  .env.production  .gitignore  Dockerfile  README.md  config.yml  docker-entrypoint.sh  domain.yml  main.py  pyproject.toml  start-rasa.sh  story_graph.dot  train.sh
03_Sistema_TransitoBot/rasa/actions/: actions.py
03_Sistema_TransitoBot/rasa/actions/templates/: base_cot.j2  categoria_fotomulta.j2  categoria_general.j2  fallback.j2
03_Sistema_TransitoBot/rasa/actions/utils/: intent_categorizer.py  nlu_loader.py  responses_loader.py  stories_loader.py  success_tracker.py  template_renderer.py
03_Sistema_TransitoBot/rasa/data/: nlu.yml  responses.yml  rules.yml  stories.yml
03_Sistema_TransitoBot/rasa/data/openrouter/: openrout  openrouter
(+65 files in other folders)
